--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@ img {
   text-decoration: none;
 }
 
+
 h1,
 h2,
 h3,
@@ -119,7 +120,6 @@ p {
 
 .site-nav .links {
   display: block;
-  color: var(--headers-color);
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -146,11 +146,14 @@ p {
   line-height: 1.5;
   letter-spacing: 0.04em;
   box-shadow: 0px 4px 4px 0px #00000026;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button:hover,
 .main-button:focus {
   background-color: var(--accent-color);
+  
 }
 
 .links {
@@ -162,12 +165,67 @@ p {
   color: var(--links-color);
 }
 
+.header-link {
+  color: var(--headers-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.current {
+  position: relative;
+  color: var(--accent-color);
+}
+
+.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+    background-color: var(--accent-color);
+      width: 48px;
+      height: 4px;
+      border-radius: 2px;
+}
+
+
+.current-portfolio {
+  position: relative;
+  color: var(--accent-color);
+}
+
+.current-portfolio::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  background-color: var(--accent-color);
+  width: 66px;
+  height: 4px;
+  border-radius: 2px;
+}
+
 /* hover/focus */
 
 .header-link:hover,
 .header-link:focus {
   color: var(--accent-color);
 }
+
+/* .header-link::after {
+  display: block;
+  content:"";
+    background-color: var(--accent-color);
+    width: 48px;
+    height: 4px;
+    border-radius: 2px;
+} */
+
+/* .header-list-item {
+display: block;
+background-color: var(--accent-color);
+width: 48px;
+height: 4px;
+border-radius: 2px;
+} */
 
 .button:hover,
 .button:focus {
@@ -345,10 +403,12 @@ margin-bottom: 8px;
   justify-content: center;
   border: 1px solid #8E8F99;
   border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-picture {
   fill:#8E8F99;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon:hover,
@@ -369,6 +429,7 @@ fill: var(--accent-color);
     justify-content: center;
     background-color: var(--links-color);
     border-radius: 50%;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .sm-icon:hover,
@@ -413,13 +474,61 @@ fill: var(--accent-color);
 
 .examples-card {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.card-box {
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+  border: none;
+  /* width: 360px;
+  height: 300px; */
+}
+
+.card-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: var(--links-color);
+  transform: translatey(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* .card-box:hover .card-overlay {
+  transform: translatey(0);
+} */
+
+.link-overlay {
+  display: block;
+    
+}
+
+.link-overlay:visited {
+  color: var(--headers-color);
+}
+
+/* .link-overlay:hover {
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+      0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+      0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
+      transform: translateY(0);
+} */
+
 
 .examples-card:hover,
 .examples-card:focus {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
+}
+.link-overlay:hover .card-overlay,
+.link-overlay:focus .card-overlay{
+  transform: translate(0%) ;
 }
 
 .second-header-portfolio {
@@ -427,6 +536,18 @@ fill: var(--accent-color);
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+
+.overlay-text {
+  /* width: 296px; */
+  font-size: 16px;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 40px;
+
+  color: var(--light-mode-color);
+  line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
@@ -469,6 +590,7 @@ fill: var(--accent-color);
   color: var(--light-mode-color);
   margin-top: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 /* .footer-sm {
@@ -515,6 +637,7 @@ fill: var(--accent-color);
   fill: var(--light-mode-color);
   background-color: var(--links-color);
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-sm-icon:hover,
