--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,13 @@ body {
   /* letter-spacing: 0.02em; */
 }
 
+
 img {
   display: block;
+}
+
+button {
+  cursor: pointer;
 }
 
 .list {
@@ -75,6 +80,10 @@ p {
   font-size: 18px;
   line-height: 1.17;
 }
+
+/* PAGE HEADER */
+
+
 
 /* Site nav */
 
@@ -170,6 +179,10 @@ p {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.auth-link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .current {
   position: relative;
   color: var(--accent-color);
@@ -207,6 +220,11 @@ p {
 
 .header-link:hover,
 .header-link:focus {
+  color: var(--accent-color);
+}
+
+.auth-link:hover,
+.auth-link:focus {
   color: var(--accent-color);
 }
 
@@ -273,6 +291,9 @@ border-radius: 2px;
   margin-right: auto;
   margin-left: auto;
 }
+
+
+
 /* H2 */
 
 .feature-list {
@@ -301,6 +322,7 @@ border-radius: 2px;
   display: flex;
   gap: 24px;
   justify-content: center;
+  margin-top: 8px;
 }
 
 .team-card {
@@ -557,8 +579,7 @@ fill: var(--accent-color);
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  margin-bottom: 8px;
-}
+  }
 
 
 /* Container */
@@ -607,6 +628,7 @@ fill: var(--accent-color);
 .footer-sm-list {
  display: flex;
  gap: 16px;
+ 
 }
 
 .footer-sm-description {
@@ -643,4 +665,70 @@ fill: var(--accent-color);
 .footer-sm-icon:hover,
 .footer-sm-icon:focus {
   background-color: #31D0AA;
+}
+
+
+/* Backdrop */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  visibility 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+  transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  height: 584px;
+  background-color: #fff;
+  
+}
+
+.modal-close {
+  display: flex;
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  height: 24px;
+  width: 24px;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(231, 233, 252, 1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
+
+.modal-close-icon {
+fill: var(--headers-color);
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transform: scale(0.9);
+}
+
+.modal-close:hover,
+.modal-close:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-close:hover .modal-close-icon,
+.modal-close:focus .modal-close-icon {
+  fill: #fff;
 }
